--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-    <script type="text/javascript" src="vendor/gamee.all.devel.js"></script>
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="bower_components/gamee-js/dist/gamee.all.devel.js"></script>
+    <script type="text/javascript" src="dist/universum-gamee.js"></script>
 </head>
 
 <body>
